swagger endpoints doc done
